--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+Sure! Here’s a rewritten version of your HTML code featuring a fictional story about a character on a quest to find a leprechaun and his pot of gold.
+
+```html
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -7,82 +10,98 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <title>Em busca da cidade perdida</title>
+    <title>A Busca pelo Leprechaun e Seu Pote de Ouro</title>
 </head>
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="img/cenario-passo0.png" alt="">
-            <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
-            <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
-            <button class="btn-proximo" data-proximo="2">Pernambuco</button>
+            <img src="img/cenario-passo0.png" alt="Cenário inicial da busca pelo leprechaun">
+            <p>Era uma vez, em uma vila encantada, um jovem chamado Finn que sonhava em encontrar um leprechaun e seu pote de ouro escondido. Um dia, ele descobriu um mapa misterioso que o levaria em uma aventura incrível!</p>
+            <button class="btn-proximo" data-proximo="1">Siga para a Floresta Mágica</button>
+            <button class="btn-proximo" data-proximo="2">Vá para a Montanha dos Sonhos</button>
         </div>
         <div class="passo" id="passo-1">
-            <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
-            <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
-            <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
+            <p>Na Floresta Mágica, Finn encontra uma velha árvore falante que lhe diz que o leprechaun aparece à luz da lua cheia. O que você faz?</p>
+            <button class="btn-proximo" data-proximo="3">Esperar até a lua cheia</button>
+            <button class="btn-proximo" data-proximo="4">Explorar a floresta</button>
         </div>
         <div class="passo" id="passo-2">
-            <p>Em Pernambuco, você visita a histórica cidade de Olinda. Na carta, uma das pistas indica que para localizar a entrada para a cidade perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
-            <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
-            <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
+            <p>No caminho para a Montanha dos Sonhos, Finn encontra uma ponte encantada guardada por um dragão amigável. O dragão diz que só deixará Finn passar se ele responder a uma charada. O que você faz?</p>
+            <button class="btn-proximo" data-proximo="5">Tentar resolver a charada</button>
+            <button class="btn-proximo" data-proximo="6">Desviar e tentar uma rota alternativa</button>
         </div>
         <div class="passo" id="passo-3">
-            <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está
-                localizada no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>Com a lua cheia brilhando, Finn finalmente vê o leprechaun dançando ao redor de um arco-íris. Ele precisa se aproximar sem ser notado!</p>
+            <button class="btn-proximo" data-proximo="7">Aproximar-se silenciosamente</button>
+            <button class="btn-proximo" data-proximo="8">Tentar chamá-lo</button>
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
-            <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
-                encontrado.</p>
+            <img src="img/cenario-passo4-explorar-floresta.png" alt="Finn explorando a floresta">
+            <p>Enquanto explora a floresta, Finn encontra um caminho secreto cheio de flores brilhantes. Ele sente que está mais perto do seu objetivo!</p>
+            <button class="btn-proximo" data-proximo="7">Seguir o caminho secreto</button>
         </div>
 
         <div class="passo" id="passo-5">
-            <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
-                pista está no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
+            <p>Finn resolve a charada e o dragão o deixa passar. Ele encontra uma caverna iluminada com pedras preciosas! O que ele faz agora?</p>
+            <button class="btn-proximo" data-proximo="9">Investigar a caverna</button>
+            <button class="btn-proximo" data-proximo="10">Seguir em frente para a montanha</button>
         </div>
 
         <div class="passo" id="passo-6">
-            <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
-            <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
+            <p>Ao tentar uma rota alternativa, Finn se perde em um labirinto de árvores. Depois de um tempo, ele encontra um portal mágico.</p>
+            <button class="btn-proximo" data-proximo="11">Entrar no portal</button>
         </div>
 
         <div class="passo" id="passo-7">
-            <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
-            <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
-            <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
+            <p>Finn se aproxima silenciosamente e consegue surpreender o leprechaun! Ele deve escolher suas palavras com sabedoria.</p>
+            <button class="btn-proximo" data-proximo="12">Pedir ao leprechaun seu pote de ouro</button>
+            <button class="btn-proximo" data-proximo="13">Fazer uma amizade com ele</button>
         </div>
 
         <div class="passo" id="passo-8">
-            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>O leprechaun se assusta e foge, deixando Finn sem o ouro. Mas, ao menos, ele aprendeu que o valor da amizade é maior que qualquer tesouro!</p>
         </div>
 
         <div class="passo" id="passo-9">
-            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada da
-                cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <p>Na caverna, Finn descobre uma chave antiga que pode abrir um baú mágico. Ele sente que essa pode ser a chave para encontrar o pote de ouro!</p>
+            <button class="btn-proximo" data-proximo="14">Voltar e procurar o leprechaun com a chave</button>
         </div>
 
         <div class="passo" id="passo-10">
-            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da cidade perdida
-                aqui.</p>
-            <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
+            <p>Seguindo para a montanha, Finn encontra um grupo de elfos que conhecem o leprechaun. Eles oferecem ajuda para encontrá-lo.</p>
+            <button class="btn-proximo" data-proximo="15">Aceitar a ajuda dos elfos</button>
         </div>
 
         <div class="passo" id="passo-11">
-            <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
-            <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
-                este lugar</p>
+            <p>Finn entra no portal mágico e é transportado para um mundo encantado cheio de criaturas mágicas. Agora, ele precisa encontrar o caminho de volta.</p>
+            <button class="btn-proximo" data-proximo="16">Procurar por uma saída</button>
         </div>
 
         <div class="passo" id="passo-12">
-            <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as inscrições
-                que levam à cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <p>Finn pede ao leprechaun seu pote de ouro. O leprechaun sorri e diz que só dará o ouro se Finn provar seu valor. Ele precisa completar uma missão!</p>
+            <button class="btn-proximo" data-proximo="17">Aceitar a missão do leprechaun</button>
+        </div>
+
+        <div class="passo" id="passo-13">
+            <p>Finn decide fazer amizade com o leprechaun e eles se tornam grandes companheiros. Juntos, eles compartilham aventuras e riquezas!</p>
+        </div>
+
+        <div class="passo" id="passo-14">
+            <p>Com a chave em mãos, Finn retorna à floresta e encontra o baú mágico. Dentro dele, ele encontra não apenas ouro, mas também um mapa para mais aventuras!</p>
+        </div>
+
+        <div class="passo" id="passo-15">
+            <p>Os elfos revelam que o leprechaun vive em uma caverna secreta na montanha. Com a ajuda deles, Finn finalmente encontra o leprechaun!</p>
+            <button class="btn-proximo" data-proximo="12">Pedir o pote de ouro ao leprechaun</button>
+        </div>
+
+        <div class="passo" id="passo-16">
+            <p>Finn encontra um grupo de fadas que o ajudam a sair do mundo encantado. Com elas, ele aprende sobre amizade e generosidade.</p>
+        </div>
+
+        <div class="passo" id="passo-17">
+            <p>Finn aceita a missão e parte em uma nova aventura ao lado do leprechaun, aprendendo valiosas lições ao longo do caminho. O tesouro mais precioso é a jornada que compartilham!</p>
         </div>
     </main>
     <script src="script.js"></script>
