update html and img

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="ksjshusimagem aqui" alt="Cenário inicial da busca pelo leprechaun">
+            <img src="1.jpg" alt="Cenário inicial da busca pelo leprechaun">
             <p>Era uma vez, em uma vila encantada, um jovem chamado Finn que sonhava em encontrar um leprechaun e seu pote de ouro escondido. Um dia, ele descobriu um mapa misterioso que o levaria em uma aventura incrível!</p>
             <button class="btn-proximo" data-proximo="1">Siga para a Floresta Mágica</button>
             <button class="btn-proximo" data-proximo="2">Vá para a Montanha dos Sonhos</button>
