--- a/index.html
+++ b/index.html
@@ -18,34 +18,39 @@
             <button class="btn-proximo" data-proximo="2">Vá para a Montanha dos Sonhos</button>
         </div>
         <div class="passo" id="passo-1">
+            <img src="img/2.jpg">
             <p>Na Floresta Mágica, Finn encontra uma velha árvore falante que lhe diz que o leprechaun aparece à luz da lua cheia. O que você faz?</p>
             <button class="btn-proximo" data-proximo="3">Esperar até a lua cheia</button>
             <button class="btn-proximo" data-proximo="4">Explorar a floresta</button>
         </div>
         <div class="passo" id="passo-2">
+            <img src="img/3.jpg">
             <p>No caminho para a Montanha dos Sonhos, Finn encontra uma ponte encantada guardada por um dragão amigável. O dragão diz que só deixará Finn passar se ele responder a uma charada. O que você faz?</p>
             <button class="btn-proximo" data-proximo="5">Tentar resolver a charada</button>
             <button class="btn-proximo" data-proximo="6">Desviar e tentar uma rota alternativa</button>
         </div>
         <div class="passo" id="passo-3">
+            <img src="img/4.jpg">
             <p>Com a lua cheia brilhando, Finn finalmente vê o leprechaun dançando ao redor de um arco-íris. Ele precisa se aproximar sem ser notado!</p>
             <button class="btn-proximo" data-proximo="7">Aproximar-se silenciosamente</button>
             <button class="btn-proximo" data-proximo="8">Tentar chamá-lo</button>
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="img/cenario-passo4-explorar-floresta.png" alt="Finn explorando a floresta">
+            <img src="img/15.jpg" alt="Finn explorando a floresta">
             <p>Enquanto explora a floresta, Finn encontra um caminho secreto cheio de flores brilhantes. Ele sente que está mais perto do seu objetivo!</p>
             <button class="btn-proximo" data-proximo="7">Seguir o caminho secreto</button>
         </div>
 
         <div class="passo" id="passo-5">
+            <img src="img/16.jpg">
             <p>Finn resolve a charada e o dragão o deixa passar. Ele encontra uma caverna iluminada com pedras preciosas! O que ele faz agora?</p>
             <button class="btn-proximo" data-proximo="9">Investigar a caverna</button>
             <button class="btn-proximo" data-proximo="10">Seguir em frente para a montanha</button>
         </div>
 
         <div class="passo" id="passo-6">
+            <img src="img/5.jpg">
             <p>Ao tentar uma rota alternativa, Finn se perde em um labirinto de árvores. Depois de um tempo, ele encontra um portal mágico.</p>
             <button class="btn-proximo" data-proximo="11">Entrar no portal</button>
         </div>
@@ -61,43 +66,52 @@
         </div>
 
         <div class="passo" id="passo-9">
+            <img src="img/6.jpg">
             <p>Na caverna, Finn descobre uma chave antiga que pode abrir um baú mágico. Ele sente que essa pode ser a chave para encontrar o pote de ouro!</p>
             <button class="btn-proximo" data-proximo="14">Voltar e procurar o leprechaun com a chave</button>
         </div>
 
         <div class="passo" id="passo-10">
+            <img src="img/7.jpg">
             <p>Seguindo para a montanha, Finn encontra um grupo de elfos que conhecem o leprechaun. Eles oferecem ajuda para encontrá-lo.</p>
             <button class="btn-proximo" data-proximo="15">Aceitar a ajuda dos elfos</button>
         </div>
 
         <div class="passo" id="passo-11">
+            <img src="img/12.jpg">
             <p>Finn entra no portal mágico e é transportado para um mundo encantado cheio de criaturas mágicas. Agora, ele precisa encontrar o caminho de volta.</p>
             <button class="btn-proximo" data-proximo="16">Procurar por uma saída</button>
         </div>
 
         <div class="passo" id="passo-12">
+            <img src="img/11.jpg">
             <p>Finn pede ao leprechaun seu pote de ouro. O leprechaun sorri e diz que só dará o ouro se Finn provar seu valor. Ele precisa completar uma missão!</p>
             <button class="btn-proximo" data-proximo="17">Aceitar a missão do leprechaun</button>
         </div>
 
         <div class="passo" id="passo-13">
+            <img src="img/13.jpg">
             <p>Finn decide fazer amizade com o leprechaun e eles se tornam grandes companheiros. Juntos, eles compartilham aventuras e riquezas!</p>
         </div>
 
         <div class="passo" id="passo-14">
+            <img src="img/14.jpg">
             <p>Com a chave em mãos, Finn retorna à floresta e encontra o baú mágico. Dentro dele, ele encontra não apenas ouro, mas também um mapa para mais aventuras!</p>
         </div>
 
         <div class="passo" id="passo-15">
+            <img src="img/10.jpg">
             <p>Os elfos revelam que o leprechaun vive em uma caverna secreta na montanha. Com a ajuda deles, Finn finalmente encontra o leprechaun!</p>
             <button class="btn-proximo" data-proximo="12">Pedir o pote de ouro ao leprechaun</button>
         </div>
 
         <div class="passo" id="passo-16">
+            <img src="img/8.jpg">
             <p>Finn encontra um grupo de fadas que o ajudam a sair do mundo encantado. Com elas, ele aprende sobre amizade e generosidade.</p>
         </div>
 
         <div class="passo" id="passo-17">
+            <img src="img/9.jpg">
             <p>Finn aceita a missão e parte em uma nova aventura ao lado do leprechaun, aprendendo valiosas lições ao longo do caminho. O tesouro mais precioso é a jornada que compartilham!</p>
         </div>
     </main>
