--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
 
         <div class="passo" id="passo-17">
-            <img src="img/9.jpg">
+            <img class="img" src="img/9.jpg">
             <p>Finn aceita a missão e parte em uma nova aventura ao lado do leprechaun, aprendendo valiosas lições ao longo do caminho. O tesouro mais precioso é a jornada que compartilham!</p>
         </div>
     </main>
